# todo-SDD

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PULL_REQUEST.md  README.md  TEST_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  research.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
backend/: .dockerignore  .env.example  API.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
backend/history/prompts/002-phase-web-app/: 0010-phase-web-app-implement-view-tasks-mark-complete.green.prompt.md  0011-phase-web-app-further-updates-view-tasks-mark-complete.green.prompt.md  0012-phase-web-app-final-updates-view-tasks-mark-complete.green.prompt.md
backend/migrations/: env.py
backend/migrations/versions/: 2c1f8c6a4e7b_tasks_user_id_to_text.py  7476f8ca28d6_add_due_date_and_subtasks_to_tasks.py  845261bb836c_initial_schema_users_and_tasks_tables.py  c3a0a1c0d9bf_add_priority_and_tags_to_tasks.py  d4e6b7a2c9f1_add_task_list_indexes.py
backend/src/: __init__.py
backend/src/api/: __init__.py  dependencies.py  main.py  validators.py
backend/src/api/models/: __init__.py  auth_models.py  task_models.py
backend/src/api/routes/: __init__.py  auth_routes.py  task_routes.py
backend/src/application/: __init__.py
backend/src/application/dto/: __init__.py  task_dto.py  task_input_dto.py  user_dto.py  user_input_dto.py
backend/src/application/use_cases/: __init__.py  add_task.py  delete_task.py  list_tasks.py  mark_task_complete.py  signin.py  signup.py  update_task.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  task.py  user.py
backend/src/domain/exceptions/: __init__.py  domain_exceptions.py
backend/src/domain/repositories/: __init__.py  task_repository.py  user_repository.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/config/: __init__.py  settings.py
backend/src/infrastructure/persistence/: __init__.py  database.py  models.py  postgres_task_repository.py  postgres_user_repository.py
backend/src/infrastructure/security/: __init__.py  security.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_task_routes.py
backend/tests/unit/: __init__.py  test_postgres_task_repository.py  test_postgres_user_repository.py
flowstate---intelligent-task-manager/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
flowstate---intelligent-task-manager/components/: AppView.tsx
flowstate---intelligent-task-manager/components/Landing/: AiShowcase.tsx  CallToAction.tsx  Features.tsx  Hero.tsx  InteractiveDemo.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx
flowstate---intelligent-task-manager/services/: geminiService.ts
frontend/: .env.local.example  .eslintrc.json  CLAUDE.md  COMPONENTS.md  jest.config.js  lighthouse-report.html  package.json  tailwind.config.js  tsconfig.json
frontend/__mocks__/: fileMock.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/tests/: setup.ts
history/phrs/: T032-signup-page-ui.phr.md  T033-authform-component.phr.md
specs/001-phase-basic-todo/: data-model.md  plan-extended.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phase1-console/: spec.md
specs/001-phase2-web-app/: plan.md  spec.md
specs/002-phase-web-app/: STATUS.md  architecture.md  data-model.md  overview.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-landing-page/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
tests/: conftest.py
(+156 files in other folders)
